image in blog cards fixed , now even for smaller images bottom white space wont come.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -594,15 +594,14 @@ body {
 
 .blog-card-image-container {
   width: 265px;
-  height: 202px;
+  max-width: 100%;
+  height: auto;
   background: #d9d9d9;
   overflow: hidden;
   position: relative;
 }
 
-.blog-card-image-container-mobile {
-  display: none;
-}
+
 
 @media (max-width: 1100px) {
   .blog-card-meta-info {
